# Microservices-Chip-Quality-

./: .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  1. Architecture (final).txt  CODING_AGENT_SUCCESS_GUIDE.md  CONTRIBUTING.md  IMPLEMENTATION_ANALYSIS_DEEP_DIVE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  KAFKA_IMPLEMENTATION.md  MISSING_COMPONENTS_ANALYSIS.md  Makefile  OBSERVABILITY_IMPLEMENTATION.md  README.md  SECURITY.md  conftest.py  docker-compose.yml  pyproject.toml  run_tests.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-fix.md  bug-fix.yml  database-implementation.md  documentation-update.yml  feature-implementation.md  feature-implementation.yml
.github/PULL_REQUEST_TEMPLATE/: issue-implementation.md  standard.md
.github/workflows/: auto-close-issues.yml  ci-cd.yml  enhanced-auto-close.yml
adr/: 0001-framework-fastapi.md
docs/: AUTO_CLOSE_SUCCESS_CHECKLIST.md  CODING_AGENT_INSTRUCTIONS.md  TESTING.md  WORKFLOW_GUIDE.md  architecture.md  quality-assurance-framework.md
docs/adr/: 0001-framework-fastapi.md  0002-auth-oauth2-jwt.md  003-nvidia-triton-integration.md  004-event-driven-architecture.md  005-database-selection.md  006-observability-stack.md  007-security-architecture.md
docs/api/: openapi.yaml
docs/database/: schema.md
examples/: observability_demo.py
issues/: 001-database-models-implementation.md  002-authentication-authorization.md  003-inspection-service-logic.md  004-ml-inference-pipeline.md  005-event-streaming-kafka.md  006-observability-monitoring.md  007-artifact-management.md  008-quality-reporting-analytics.md  IMPLEMENTATION_ROADMAP.md
k8s/base/: api-gateway.yaml  configmaps.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgresql.yaml  redis.yaml  secrets.yaml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/alerts/: business.yml  performance.yml  quality.yml  system.yml
services/api-gateway/: .gitignore  Dockerfile  README.md  pyproject.toml
services/api-gateway/app/: main.py
services/api-gateway/app/core/: auth.py  config.py  http_client.py  logging.py  observability.py  rate_limiting.py
services/api-gateway/app/middleware/: error_handling.py  request_id.py
services/api-gateway/app/routers/: artifacts.py  auth.py  health.py  inference.py  inspections.py  reports.py
services/artifact-svc/: .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  requirements.txt
services/artifact-svc/app/: __init__.py  main.py
services/artifact-svc/app/core/: __init__.py  config.py  dependencies.py  exceptions.py
services/artifact-svc/app/models/: __init__.py  artifact.py
services/artifact-svc/app/routers/: __init__.py  artifacts.py
services/artifact-svc/app/schemas/: __init__.py  artifact.py
services/artifact-svc/app/services/: __init__.py  artifact_service.py  (+1 more)
services/artifact-svc/tests/: __init__.py  conftest.py
services/inference-svc/: Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  requirements.txt
services/inference-svc/app/: __init__.py  main.py
services/ingestion-svc/: pyproject.toml
services/ingestion-svc/app/: main.py
services/inspection-svc/: Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  requirements.txt
services/inspection-svc/app/: __init__.py  main.py
services/inspection-svc/tests/: __init__.py
services/report-svc/: .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt
services/report-svc/app/: __init__.py  main.py
services/shared/: README.md  __init__.py  alembic.ini  pyproject.toml
services/shared/auth/: __init__.py  dependencies.py  exceptions.py  handlers.py  password.py  permissions.py  schemas.py  tokens.py
services/shared/database/: __init__.py  base.py  engine.py  enums.py  session.py
services/shared/events/: IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  README.md  __init__.py
services/shared/events/consumers/: __init__.py  analytics_consumer.py  base_consumer.py  notification_consumer.py
services/shared/events/examples/: event_streaming_demo.py
services/shared/events/processors/: __init__.py
services/shared/events/producers/: __init__.py  base_producer.py  inspection_producer.py  manufacturing_producer.py  quality_producer.py  user_producer.py
services/shared/events/schemas/: __init__.py  inspection.avsc  manufacturing.avsc  quality.avsc  system.avsc  user.avsc
services/shared/events/tests/: test_event_streaming.py
services/shared/events/utils/: __init__.py  kafka_client.py  schema_registry.py  serialization.py
services/shared/migrations/: env.py  script.py.mako
services/shared/migrations/versions/: 001_initial_schema.py
services/shared/models/: __init__.py  artifacts.py  audit.py  inference.py  inspection.py  manufacturing.py  reporting.py  users.py
services/shared/observability/: README.md  __init__.py
services/shared/observability/health/: __init__.py  checks.py  dependencies.py  endpoints.py
services/shared/observability/logging/: __init__.py  correlation.py  setup.py
services/shared/observability/metrics/: __init__.py  business_metrics.py  collector.py  system_metrics.py
services/shared/observability/tracing/: __init__.py  tracer.py
services/shared/schemas/: __init__.py  common.py  inspection.py  manufacturing.py
services/shared/tests/: conftest.py
services/shared/tests/integration/: test_database_operations.py
services/shared/tests/unit/: test_models.py  test_schemas.py
tests/e2e/: test_complete_workflows.py
tests/fixtures/: manufacturing_factories.py
tests/integration/: test_service_integration.py
tests/performance/: test_performance.py
tests/security/: test_security.py
tests/unit/: test_api_gateway.py
tests/unit/observability/: __init__.py  test_health.py  test_logging.py  test_metrics.py  test_tracing.py
tests/utils/: test_helpers.py
tools/: generate_demo_data.py  load_test.py
tools/quality/: check-model-migrations.py  check-test-coverage.py  generate_summary.py  quality-gate-check.py  validate-api-contracts.py  validate-implementation.py
(+63 files in other folders)
