[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chip-quality-shared"
version = "0.1.0"
description = "Shared database models and utilities for Chip Quality Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

dependencies = [
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "alembic>=1.13.0",
    
    # Validation and configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Logging
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
